Сделал Куб и надпись

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+<div class="cube">
 <div class="container">
   <div class="back side"></div>
   <div class="left side"></div>
@@ -31,7 +32,9 @@
   <div class="bottom side"></div>
   <div class="front side"></div>
 </div>
+</div>
 
+<div id = 'dynamic-text'></div>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
