--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Maksym Mytrofanov</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,32 +20,42 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Orbitron&display=swap');
+  </style>
 </head>
 
 <body>
-<div class="cube">
 <div class="container">
-  <div class="back side"></div>
-  <div class="left side"></div>
-  <div class="right side"></div>
-  <div class="top side"></div>
-  <div class="bottom side"></div>
-  <div class="front side"></div>
+  <div class="header">
+    <h1>Maksym Mytrofanov</h1>
+  </div>
+  <div class="junior_developer">
+    <h2>Junior Frontend Developer</h2>
+  </div>
+
+  <div class="cube">
+    <div class="cube-container">
+      <div class="back side"></div>
+      <div class="left side"></div>
+      <div class="right side"></div>
+      <div class="top side"></div>
+      <div class="bottom side"></div>
+      <div class="front side"></div>
+    </div>
+  </div>
+  <div class="experience">
+    Experience:
+  </div>
+
 </div>
-</div>
 
-<div id = 'dynamic-text'></div>
+<script src="js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
