начал заполнять раздел о себе

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       <div class="front side"></div>
     </div>
   </div>
-  <div class="experience">
-    Experience:
-  </div>
+  <div id="about_me" ></div>
+
+  <div id="about_me_items" ></div>
 
 </div>
 
