--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </div>
   </div>
   <div id="about_me" ></div>
+  <div id="status" >Age: 43 years  		marital status:  married		two kids(boys):  10years & 17 years </div>
 
   <div id="about_me_items" ></div>
 
